--- a/app/tenders/templates/tender_form.html
+++ b/app/tenders/templates/tender_form.html
@@ -37,10 +37,10 @@
         <div class="mb-3">
             {{ form.id_projektu.label(class="form-label") }}
             <div class="input-group">
-                {{ form.id_projektu(class="form-select select2-enable" + (' is-invalid' if form.id_projektu.errors else '')) }}
-                <a href="{{ url_for('main.new_project') }}" target="_blank" class="btn btn-outline-secondary" title="Dodaj nowy projekt">
+                {{ form.id_projektu(class="form-select select2-enable" + (' is-invalid' if form.id_projektu.errors else ''), id="id_projektu_select") }}
+                <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#mainModal" data-url="{{ url_for('main.add_project_api') }}" data-title="Dodaj nowy projekt">
                     <i class="bi bi-plus-lg me-1"></i>Dodaj
-                </a>
+                </button>
                 {% for error in form.id_projektu.errors %}
                     <div class="invalid-feedback">{{ error }}</div>
                 {% endfor %}
@@ -57,4 +57,90 @@
         {{ form.submit(class="btn btn-primary") }}
     </form>
 </div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+<script>
+    $(document).ready(function() {
+        // Obsługa przesłania formularza w modalu główym (dla ProjectForm)
+        $(document).on('submit', '#addProjectFormModal', function(e) {
+            e.preventDefault();
+            var form = $(this);
+            
+            $.ajax({
+                type: 'POST',
+                url: form.attr('action'),
+                data: form.serialize(),
+                success: function(response) {
+                    if (response.success) {
+                        // Dodaj nowo dodany projekt do Select2
+                        var projectSelect = $('#id_projektu_select');
+                        var newOption = new Option(response.name, response.id, true, true);
+                        projectSelect.append(newOption).trigger('change');
+
+                        // Zamknij modal
+                        var mainModal = bootstrap.Modal.getInstance(document.getElementById('mainModal'));
+                        mainModal.hide();
+
+                        // Opcjonalnie: wyświetl flash message
+                        // flashMessage('Projekt dodany pomyślnie!', 'success');
+                    } else {
+                        // Wyświetl błędy walidacji w modalu
+                        var errorsDiv = $('#project-form-errors');
+                        errorsDiv.empty().hide();
+                        if (response.errors) {
+                            for (var fieldName in response.errors) {
+                                var fieldErrors = response.errors[fieldName];
+                                var fieldInput = form.find('[name="' + fieldName + '"]');
+                                if (fieldInput.length) {
+                                    fieldInput.addClass('is-invalid');
+                                    fieldInput.next('.invalid-feedback').text(fieldErrors[0]);
+                                } else if (fieldName === '_form') {
+                                    errorsDiv.append('<p>' + fieldErrors[0] + '</p>').show();
+                                } else {
+                                    errorsDiv.append('<p>' + fieldName + ': ' + fieldErrors[0] + '</p>').show();
+                                }
+                            }
+                        }
+                    }
+                },
+                error: function(jqXHR) {
+                    var errorsDiv = $('#project-form-errors');
+                    errorsDiv.empty().append('<p class="text-danger">Wystąpił błąd serwera.</p>').show();
+                }
+            });
+        });
+
+        // Resetuj formularz i usuń błędy przy otwieraniu modala
+        $(document).on('show.bs.modal', '#mainModal', function (event) {
+            var button = $(event.relatedTarget); // Przycisk, który wywołał modal
+            var url = button.data('url');
+            var title = button.data('title');
+
+            var modal = $(this);
+            modal.find('.modal-title').text(title);
+            modal.find('.modal-body').load(url, function() {
+                // Po załadowaniu formularza, zainicjuj Select2 w modalu
+                initializeSelect2(modal.find('.select2-enable'));
+            });
+        });
+
+        // Usuń klasy is-invalid i komunikaty o błędach przy zamykaniu modala
+        $(document).on('hidden.bs.modal', '#mainModal', function () {
+            $(this).find('.is-invalid').removeClass('is-invalid');
+            $(this).find('.invalid-feedback').text('');
+            $('#project-form-errors').empty().hide();
+        });
+
+        // Funkcja do wyświetlania flash messages (jeśli potrzebne)
+        function flashMessage(message, category) {
+            var alertHtml = '<div class="alert alert-' + category + ' alert-dismissible fade show" role="alert">' +
+                            message +
+                            '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>' +
+                            '</div>';
+            $('.container:first').prepend(alertHtml); // Dodaj alert na górze strony
+        }
+    });
+</script>
 {% endblock %}
