--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -139,6 +139,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
     <script src="{{ url_for('static', filename='js/select2_config.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/modal_form_handler.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script>
     $(document).ready(function() {
