Zmiana responsywności tabeli analizy cen jednostkowych

--- a/app/tenders/templates/unit_prices_analysis.html
+++ b/app/tenders/templates/unit_prices_analysis.html
@@ -46,7 +46,7 @@
 
     {% if all_work_types %}
     <div class="table-responsive">
-        <table class="table table-striped table-hover table-responsive-stacking">
+        <table class="table table-striped table-hover ">
             <thead>
                 <tr>
                     <th>Nazwa roboty</th>
